--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.2</junit.version>
-        <hibernate-version>5.0.1.Final</hibernate-version>
     </properties>
 
     <dependencies>
@@ -71,27 +70,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--driver for connection to MYSql database -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.34</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
         </dependency>
 
-        <!-- Hibernate -->
-        <!-- to start need only this -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.0.1.Final</version>
-        </dependency>
 
-        <!-- for JPA, use hibernate-entitymanager instead of hibernate-core -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.0.1.Final</version>
-        </dependency>
     </dependencies>
 
     <build>
